@@ -1,3 +1,7 @@
+*** 19990907_3 by lusky
+changed killpath again.  I think I can live with this one.  (jl)
+
+
 *** 19990907_2 by lusky
 bumped patchlevel to b104
 fixed a couple of stary index()'s
